fix(client): align tile image

--- a/packages/amplication-client/src/style/mixin.scss
+++ b/packages/amplication-client/src/style/mixin.scss
@@ -282,6 +282,7 @@ $bullet-size: 6px;
     img {
       max-width: 150px;
       max-height: 150px;
+      align-self: center;
     }
 
     &__details {
